# FreedomSuite

./: .gitignore  LICENSE  Makefile  README.md  build.gradle.kts  gradle.properties  local.properties.example  settings.gradle.kts
.github/workflows/: ci.yml  publish.yml
apps/auth/: build.gradle.kts
apps/calendar/: build.gradle.kts
apps/chat/: build.gradle.kts
apps/files/: build.gradle.kts
apps/inbox/: build.gradle.kts
apps/keyboard/: build.gradle.kts
apps/messages/: build.gradle.kts
apps/search/: build.gradle.kts
build-logic/convention/: build.gradle.kts
config/: proguard-freedom.pro
core/account/: build.gradle.kts
core/applock/: build.gradle.kts
docs/: AUTH.md  CALENDAR-PROTOCOL.md  CAMERA-APP.md  CRYPTO.md  DEV-MAIL-SERVER.md  FDROID-PIPELINE.md  GITHUB-RELEASES.md  GRAPHENEOS.md  KEYBOARD.md  LLM-SERVICE.md  MAIL-DISCOVERY.md  MESSAGING.md  ML-MODELS.md  MVP-AUDIT.md  PRIVACY.md  SPAM-FILTER.md  STORAGE-AUDIT.md  THIRD-PARTY-AUDIT.md  THREAT-MODEL.md  UNIFIED-SEARCH.md
gradle/: libs.versions.toml
scripts/: ci-verify.sh  collect-release-apks.sh  dev-mail-server.sh  emulator-start.sh  fdroid-prebuild.sh  fdroid-sync-metadata.sh  fetch-genai-aar.sh  fetch-keyboard-models.sh  fetch-llm-model.sh  fetch-ml-models.sh  generate-models-manifest.sh  github-setup.sh  install-dev-apps.sh  ml-integration-test.py  publish.sh  push-llm-model.sh  quantize-ml-models.py  quantize-ml-models.sh  setup-ml-tools.sh
sync/freedom-sync-core/: Cargo.toml
sync/freedom-sync-core/src/: algorithms.rs  blob.rs  error.rs  lib.rs  manifest.rs
testing/: README.md
(+278 files in other folders)
